bug fixed-restricted the jump between empty slots

--- a/scss/src/main.scss
+++ b/scss/src/main.scss
@@ -1,7 +1,11 @@
 body{
 	background-image: url('1.jpg');
 	background-repeat: no-repeat;
+	background-position:  center;
+
+
 }
+
 #circle{
 	width: 93vh;
   height: 93vh;
